apps/prod2/jenkins/beta/release/namespace-agent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "${AGENT_NAMESPACE}"
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: kubernetes.io/arch=amd64
